# django-totp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.helper_html/: json_to_svg.html  json_to_txt.html
helper_html/: index.html  json_to_svg.html  json_to_txt.html  scripts.js  styles.css
src/: manage.py  pytest.ini
src/django_totp/: __init__.py  apps.py  auth.py  backup_code.py  backup_code_utils.py  email.py  email_utils.py  encryption.py  models.py  qrsvg.py  serializers.py  throttle.py  totp.py  urls.py  views.py
src/django_totp/migrations/: 0001_initial.py
src/django_totp/urls/: __init__.py  jwt.py  recovery.py
src/django_totp_project/: asgi.py  settings.py  urls.py  wsgi.py
src/tests/: conftest.py  test_jwt.py  test_totp.py
