[project]
name = "django-totp"
dynamic = ["version"]

authors = [{ name = "Kumar Sahil", email = "krsahil8825@gmail.com" }]

maintainers = [{ name = "Kumar Sahil", email = "krsahil8825@gmail.com" }]

description = "Production-ready TOTP (Time-based One-Time Password) support for Django and Django REST Framework."
readme = "README.md"

license = { text = "MIT" }

requires-python = ">=3.12"

dependencies = [
    "cryptography>=47.0.0",
    "django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
]

keywords = [
    "django",
    "totp",
    "2fa",
    "otp",
    "authentication",
    "security",
    "drf",
    "django-rest-framework-totp",
    "django-totp",
    "django-two-factor-auth",
    "python-totp",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://krsahil8825.github.io/django-totp/"
Documentation = "https://krsahil8825.github.io/django-totp/"
Repository = "https://github.com/krsahil8825/django-totp"
Issues = "https://github.com/krsahil8825/django-totp/issues/"

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_totp*"]
exclude = ["django_totp_project*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[dependency-groups]
dev = ["djoser>=2.3.3", "drf-spectacular>=0.29.0"]
